// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breakpoint renders correctly down prop 1`] = `
<DocumentFragment>
  .cache-gn2be8 {
  display: none;
}

@media (max-width: 767px) {
  .cache-gn2be8 {
    display: block;
  }
}

<div
    class="cache-gn2be8 e18983st0"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Breakpoint renders correctly up prop 1`] = `
<DocumentFragment>
  .cache-1lu1she {
  display: none;
}

@media (min-width: 768px) {
  .cache-1lu1she {
    display: block;
  }
}

<div
    class="cache-1lu1she e18983st0"
  >
    Hello
  </div>
</DocumentFragment>
`;
